# messenger-client

./: .gitignore  Messanger.pro  README.md  actionhandler.h  communication.h  connection.h  connectionprovider.cpp  connectionprovider.h  connectionservice.cpp  connectionservice.h  jsonconstants.h  jsonfactory.cpp  jsonfactory.h  loginactionhandler.cpp  loginactionhandler.h  mailslotclient.cpp  mailslotclient.h  mailslotconnection.cpp  mailslotconnection.h  main.cpp  messageactionhandler.cpp  messageactionhandler.h  messengerconfiguration.cpp  messengerconfiguration.h  nazarii.md  pipeclient.cpp  pipeclient.h  pipeconnection.cpp  pipeconnection.h  qml.qrc  qtquickcontrols2.conf  quickviewwrapper.cpp  quickviewwrapper.h  registeractionhandler.cpp  registeractionhandler.h  servereventservice.cpp  servereventservice.h  signalsconnector.cpp  signalsconnector.h  socketclient.cpp  (+6 more)
action_handles/: actionhandler.cpp  loginactionhandler.cpp  loginactionhandler.h  messageactionhandler.cpp  messageactionhandler.h
connectins/: connection.h  mailslotconnection.cpp  mailslotconnection.h  pipeconnection.cpp  pipeconnection.h  socketconnection.cpp
qml/: CMakeLists.txt  Messanger.qmlproject  Messanger.qmlproject.qtds  qmlmodules
qml/content/: App.qml  Screen01.ui.qml  Screen01.ui.qml.QbKgkP  Screen01.ui.qml.aNMlnn  Screen01.ui.qml.kcfbMt  Screen01.ui.qml.sDbPbp
qml/imports/: CMakeLists.txt
qml/imports/Messanger/: CMakeLists.txt  Constants.qml  qmldir
qml/imports/Messanger/designer/: plugin.metainfo
qml/src/: import_qml_plugins.h
